# twatch

./: README.md  pyproject.toml  twatch.py
.claude/: settings.json
.claude/hooks/: doc-drift.sh
specs/: activity-indicator.md  cli.md  metadata-store.md  tmux-bridge.md  tui-shell.md
twatch/: __main__.py  app.py  app.tcss  cli.py  store.py  tmux.py
