[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twatch"
version = "0.2.0"
description = "Textual TUI for managing tmux sessions with persistent metadata"
requires-python = ">=3.9"
dependencies = ["textual>=0.60"]

[project.scripts]
twatch = "twatch.cli:main"

[tool.setuptools.packages.find]
include = ["twatch*"]

[tool.setuptools.package-data]
twatch = ["*.tcss"]
